--- a/ai_notes_3blue1brown.tex
+++ b/ai_notes_3blue1brown.tex
@@ -48,7 +48,7 @@ Neural Networks \\
 \vspace{0.5cm}
 
 \section{Introduction}
-Notes for the introduction to neural networks presented by \textbf{3blue1brown}. Watch the whole series here: \underline{todo paste link}. This series describes the strategy to recognize handwritten numbers.
+Notes for the introduction to neural networks presented by \textbf{3blue1brown}. Watch the whole series here: \href{https://www.youtube.com/watch?v=aircAruvnKk}. This series describes the strategy to recognize handwritten numbers.
 
 \clearpage
 
