--- a/test.tex
+++ b/test.tex
@@ -18,7 +18,7 @@ test image \ref{fig:test}.
 
 \begin{figure}[h]
 	\centering
-	\includegraphics{ai_10.png}
+	\includegraphics[width=\linewidth]{ai_10.png}
 	\label{fig:test}
 \end{figure}
 
