--- a/ai_notes_3blue1brown.tex
+++ b/ai_notes_3blue1brown.tex
@@ -66,7 +66,7 @@ Notes for the introduction to neural networks presented by \textbf{3blue1brown}.
 
 \clearpage
 
-\section{Chapter 1 - But what is a neural network?}
+\section{But what is a neural network?}
 
 % -------------------------------------------------- 
 
@@ -192,7 +192,48 @@ The basic idea is that you feed the network with testdata which form the previou
 \caption{Cost function for one input}
 \end{figure}
 
-To give the network a feedback we need to define a cost function. This function takes an input input and checks if the output of the network corresponds with the expected output stated in the testcase. To do so the function calculates the square of difference between the expected and the actual output and adds all those up for all the nodes. E.g. see \ref{ai_13}. The network is not sure which digit it may be and besides the 1 suggest multiple other numbers. In a perfect world all other neurons should have an activation of zero while the one has an activation of also one. \textit{The \textbf{cost} of the actual output is high while the cost of the optimal output is low.} The \textbf{cost} of the whole network is defined by the average of those costs over all the training data.
+To give the network a feedback we need to define a cost function. This function takes an input and checks if the output of the network corresponds with the expected output stated in the testcase. To do so the function calculates the square of difference between the expected and the actual output and adds all those up for all the nodes. E.g. see \ref{ai_13}. The network is not sure which digit it may be and besides the digit one suggest multiple other output digits. In a perfect world all other neurons should have an activation of zero while the neuron with the digit one has an activation of also one. \textit{The \textbf{cost} of the actual output is high while the cost of the optimal output is low.} The \textbf{cost} of the whole network is defined by the average of those costs over all the training data.
+
+
+To train the network you have to know the minimum of this cost function. Take the following example for minimizing a function taking on input value and generating one output. 
+
+\begin{figure}[!htbp]
+\img{ai_14}
+\caption{Fining minimum 2d}
+\end{figure}
+
+To generate the next minimum to a given point we take the slope of the function at this point and go to the negative side of the tangent. It is important to mention that the step size for the next point is proporitional to the slope itself. This way we prevent the point from overgoing the minimum. 
+
+But it isn't enough to just take one point and run it with the explained algorithm, there need to be multiple points on the curve to determine the other minimums. Taking this approach we can find more minima and from those findings can determine the best / smallest one. Although we find more minima than before there is not guarantee for finding \textbf{all} minima.
+
+\begin{figure}[!htbp]
+\img{ai_14}
+\caption{Fining minimum 3d}
+\end{figure}
+
+Now consider a function taking in 2 input values and generating one output value \lbl{ai_14}. We can display this function as a surface on the xy plane in the 3d space. Now the challenge is to find the best minimum here. Again looking at the previous example we need to spread out points over the function where we want to take a look at the direction of the next minimum. To do so we need to take a look at the gradient vector. Inverting this we get a vector point pointing \textit{downhill} to the next minimum \lbl{ai_16}. 
+
+\begin{figure}[!htbp]
+\img{ai_16}
+\caption{Fining minimum 2d}
+\end{figure}
+
+%To put in in perspective with the cost function we need to imagine the 
+This principle can be applied to the given cost function of the network. To do so the cost function needs to be interpreted as a function taking all the weights in as parameters and generates a single output values. It is the same as the last example with the 3d space. When interpreting the cost function as some kind of x dimensional surface we need to find the direction for the minimum. As explained this can be done by taking the negative Gradient of the current value. 
+
+\clearpage 
+
+\begin{figure}[!htbp]
+\img{ai_17}
+\caption{Vector notatio with the negative gradient}
+\end{figure}
+
+To write it in a compacter way we define a vector with all of the networks weights in one column. The cost function takes this vector as an input. We then define the negative Gradient of the cost function and the output can in turn be written as a vector again. In a more colloquial manner: \textit{The output of the negative gradient states the direction of which the Ball rolling downhill needs to take to find the minimum.}
+
+When minimizing the cost function this way we don't minimize the function for one specific training example but for all possible training data samples. The algorithm for computing this gradient efficiently which is effectifly the part of how a neural network learns is called \textbf{backpropagation} (which has its own chapter). 
+
+
+
 
 \end{document}
 
