--- a/ai_notes_3blue1brown.tex
+++ b/ai_notes_3blue1brown.tex
@@ -77,19 +77,23 @@ Notes for the introduction to neural networks presented by \textbf{3blue1brown}.
 \FloatBarrier
 
 \begin{figure}[h]
-\img{ai_1}
+	\centering
+	\includegraphics[max width=.9\textwidth]{ai_1}
+	\label{ai_1}
 \caption{Image interpreted as first layer of neural network}
 \end{figure}
 
-Each pixel from the image is represented by a so called \textit{neuron} \lbl{ai_1}. These neurons possess a value called \textbf{Activiation} which contains a float between 0 and 1. This value specifies the brightness of this the particular pixel. This activation value also can be interpreted as how \textit{lit up} this particular neuron actually is, 1 meaning 100 \% in this context.
+Each pixel from the image is represented by a so called \textit{neuron} \ref{ai_1}. These neurons possess a value called \textbf{Activiation} which contains a float between 0 and 1. This value specifies the brightness of this the particular pixel. This activation value also can be interpreted as how \textit{lit up} this particular neuron actually is, 1 meaning 100 \% in this context.
 
 
 \begin{figure}[b!]
-\img{ai_2}
+	\centering
+	\includegraphics[max width=.9\textwidth]{ai_2}
+	\label{ai_2}
 \caption{Resulting top layer}
 \end{figure}
 
-As each number is analyzed the top layer gives its prediction to a given input via Activation of the ten most right nodes \lbl{ai_2}. The one with the highest activation states what the system thinks the correct number might be. The layers between the top and the bottom layer are called \textbf{hidden layers}. 
+As each number is analyzed the top layer gives its prediction to a given input via Activation of the ten most right nodes \ref{ai_2}. The one with the highest activation states what the system thinks the correct number might be. The layers between the top and the bottom layer are called \textbf{hidden layers}. 
 
 \begin{figure}[h]
 \img{ai_3}
