--- a/testRef.tex
+++ b/testRef.tex
@@ -15,15 +15,6 @@
 \usepackage{placeins}
 \usepackage{xcolor}
 \usepackage{float}
-\usepackage{fancyhdr}
-
-\pagestyle{fancy}
-\fancyhf{}
-\rhead{\rightmark}
-\chead{\thepart}
-\lhead{\nouppercase{\leftmark}}
-\cfoot{\thepage}
-\graphicspath{{"./img/"}}
 
 \hypersetup{
     colorlinks,
@@ -33,30 +24,69 @@
     urlcolor=black
 }
 
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\rhead{\rightmark}
+\chead{\thepart}
+\lhead{\nouppercase{\leftmark}}
+\cfoot{\thepage}
 \graphicspath{{"./img/"}}
 
+\newcommand{\lbl}[1]{(see image \ref{#1})}
+\newcommand{\img}[1]{
+	\centering
+	\includegraphics[max width=.9\textwidth]{#1.png}
+	\label{#1}
+}
+
+\title{%
+Neural Networks \\
+\large Deep Learning}
+
+\author{Silas Hoffmann, inf103088}
+\date{\today}
 
 
 \begin{document}
+\maketitle
 
-\section{section}
-\subsection{subsection}
+\vspace{0.5cm}
+\tableofcontents
+\vspace{1cm}
 
+Notes for the introduction to neural networks presented by \textbf{3blue1brown}. Watch the whole series, click \href{https://www.youtube.com/watch?v=aircAruvnKk}{\color{blue} {here}}. This series describes the strategy to recognize handwritten numbers. To navigate to reference / heading just click on the name.
 
-\begin{figure}[H]
+\clearpage
+\listoffigures
+\clearpage
+
+\section{But what is a neural network?}
+
+% -------------------------------------------------- 
+
+\subsection{Structural overview}
+
+\FloatBarrier
+
+\begin{figure}[h]
 	\centering
-	\includegraphics{ai_1.png}
-	\caption{test}
-	\label{testlabel}
+	\includegraphics[max width=.9\textwidth]{ai_1}
+	\caption{Image interpreted as first layer of neural network}
+	\label{ai_1}
 \end{figure}
 
-\begin{figure}[H]
-	\centering
-	\includegraphics{ai_1.png}
-	\caption{test2}
-	\label{testlabel2}
-\end{figure}
+Each pixel from the image is represented by a so called \textit{neuron} \ref{ai_1}. These neurons possess a value called \textbf{Activiation} which contains a float between 0 and 1. This value specifies the brightness of this the particular pixel. This activation value also can be interpreted as how \textit{lit up} this particular neuron actually is, 1 meaning 100 \% in this context.
 
-test test \ref{testlabel2}
+Testref \ref{ai_2}
+
+
+\begin{figure}[b!]
+	\centering
+	\includegraphics[max width=.9\textwidth]{ai_2}
+	\caption{Resulting top layer}
+	\label{ai_2}
+\end{figure}
 
 \end{document}
+
